Implement DOI feature (#24)
* Implement convenience feature for users to submit result files to Zenodo and obtain a DOI
* Prereserve DOIs and put them into netcdf files before publishing
* Add user attribute ORCID
* Switched to new domain qa4sm.eu
* Prevent deletion of DOI published results
* Add published results page
* Introduce published validations button on landing page and in title bar, move menu items to dropdown menu
* Switched to different import method for django settings
* Introduce access token for zenodo into automatic builds
* Add documentation on Zenodo access tokens
* Allow editing validation runs in admin ui without setting filters or output files
* Remove requirement to be logged in for viewing results
* Show publication metadata to user for correction before publishing
* Updating online help with publication process and fixing admin email

--- a/validator/static/css/service.css
+++ b/validator/static/css/service.css
@@ -45,6 +45,24 @@ html {
     margin-right: 1em;
 }
 
+.show > .btn-outline-primary.dropdown-toggle {
+    background-color: inherit;
+    color: #FFDB5C;
+    border-color: #FFDB5C;
+}
+
+.show > .btn-outline-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 .2rem rgba(248, 193, 0, .5);
+}
+
+.dropdown-item.navbar-btn-active {
+    color: initial;
+}
+
+.dropdown-item:active, .dropdown-item:focus, .dropdown-item:hover {
+    background-color: rgba(248, 193, 0, .5);
+}
+
 .container {
     max-width: 960px;
 }
@@ -59,6 +77,10 @@ html {
 
 .addon-w {
     min-width: 6.5rem;
+}
+
+.addon-w-pub {
+    min-width: 7rem;
 }
 
 .box-shadow {
@@ -90,4 +112,8 @@ html {
     margin-top: .2rem;
     margin-bottom: .2rem;
     padding: 0 .35rem;
+}
+
+a.doilink {
+    color: white;
 }
