--- a/validator/templates/validator/terms.html
+++ b/validator/templates/validator/terms.html
@@ -41,7 +41,7 @@
         <li>
             <b>User feedback:</b>
             For questions and remarks concerning the QA4SM web service, users can contact the service provider by email at
-            qa4sm (at) awst.at.
+            {{admin_mail}}.
             If necessary, the team will forward questions or comments to the respective data providers or to other recipients who
 			may be suitable for providing help with the questions received.
         </li>
@@ -67,7 +67,7 @@
         <ol>
         <li>
             The QA4SM service should be cited using the following text:
-            <p style="margin-left: 40px"><i>The results used in this study were generated using the QA4SM service available at: qa4sm.eodc.eu. The service
+            <p style="margin-left: 40px"><i>The results used in this study were generated using the QA4SM service available at: {{site_url}}. The service
             was developed by TU Wien GEO and AWST GmbH. The results were generated on [date of processing].</i>
         </li>
         <li>
@@ -92,7 +92,7 @@
 			QA4SM web service (e.g. mentioning a user's full name in emails to them) or as required by law. Aggregated user information,
 			including the number of users per country and organisation, may be passed on to funding agencies or others to advertise the
 			service or attract more funding. This is aimed at helping cover the cost of this free service. Users who want to delete some
-			or all of their user information stored in the QA4SM web service can do so by contacting the provider by email at qa4sm (at) awst.at.
+			or all of their user information stored in the QA4SM web service can do so by contacting the provider by email at {{admin_mail}}.
 			The deletion of required user information will remove access to the service.
         </li>
         <li>
