--- a/validator/templates/validator/help.html
+++ b/validator/templates/validator/help.html
@@ -15,7 +15,8 @@
         <a href="#validation">Validate Page</a><br/>
         <a href="#results_list">My Validations - Results List Page</a><br/>
         <a href="#results">Validation Results Page</a><br/>
-
+        <a href="#publication">Publication</a><br/>
+        <a href="#published">Published Validations Page</a><br/>
     </p>
 
     <a id="validation"></a>
@@ -171,27 +172,27 @@
         The buttons on the right-hand side of each validation have the following effects:
     </p>
 
-    <ul>
-        <li>
-            <span class="fas fa-folder-open"></span> You can access the <a href="#results">results details
-            page</a> of a validation through its folder button.
-        </li>
-        <li>
-            <span class="fas fa-stop"></span> The stop button is only visible while the validation is still
-            running and allows you to abort it.
-        </li>
-        <li>
-            <span class="fas fa-times"></span> The remove button is only visible once the validation has finished
-            or was aborted and will permanently delete the result.
-        </li>
-        <li>
-            <span class="fas fa-download"></span> The download graphs button allows you to download all graphs
-            produced for the validation (in png and svg formats) in a zip archive.
-        </li>
-        <li>
-            <span class="fas fa-file-download"></span> The download NetCDF button  allows you to download the
-            validation result (metrics computed).
-        </li>
+        <ul>
+            <li>
+                <span class="fas fa-folder-open"></span> You can access the <a href="#results">results details
+                page</a> of a validation through its folder button.
+            </li>
+            <li>
+                <span class="fas fa-stop"></span> The stop button is only visible while the validation is still
+                running and allows you to abort it.
+            </li>
+            <li>
+                <span class="fas fa-times"></span> The remove button is only visible once the validation has finished
+                or was aborted and will permanently delete the result.
+            </li>
+            <li>
+                <span class="fas fa-download"></span> The download graphs button allows you to download all graphs
+                produced for the validation (in png and svg formats) in a zip archive.
+            </li>
+            <li>
+                <span class="fas fa-file-download"></span> The download NetCDF button  allows you to download the
+                validation result (metrics computed).
+            </li>
 
         <li>
             <span class="fas fa-calendar-plus"></span> With the extend lifespan button, you can reset the auto-cleanup
@@ -208,7 +209,9 @@
             auto-cleanup again. It will be automatically extended, so you will have another {{ expiry_period }} days before
             deletion and will be notified (again).
         </li>
-    </ul>
+        </ul>
+    </p>
+    <img class="scaled_image mb-3" src="../../static/images/help/my_validations.png">
 
     <a id="results"></a>
     <h1 class="h3 mb-3 font-weight-normal">Validation Results Page</h1>
@@ -241,6 +244,12 @@
             <span class="fas fa-calendar-alt"></span> <span class="font-weight-bold">Un-archive</span> will make a validation eligible for
             auto-cleanup again. It will be automatically extended, so you will have another {{ expiry_period }} days before
             deletion and will be notified (again).
+        </li>
+        <li>
+            <span class="fas fa-book"></span> <span class="font-weight-bold">Publish</span> will publish the result NetCDF
+            file to <a target="_blank" href="https://zenodo.org/">Zenodo</a>. This means the results can be cited
+            with a <a target="_blank" href="https://www.doi.org/">DOI</a>. See section
+            <a href="#publication">Publication</a> for details.
         </li>
     </ul>
 
@@ -283,7 +292,59 @@
     <a id="results_graph"></a>
     <img class="scaled_image mb-3" src="../../static/images/help/results_graphs.png">
 
-    <p class="mt-5">If you want to email us to send comments, report errors, or ask questions, you can do so at qa4sm (at) awst.at .</p>
+    <a id="publication"></a>
+    <h2 class="h4 mb-3 font-weight-normal">Publication</h2>
+
+    <p>
+        This feature allows you to publish the result NetCDF file of your validation to
+        <a target="_blank" href="https://zenodo.org/">Zenodo</a> under your own name but without creating your own
+        Zenodo account. This gives you a <a target="_blank" href="https://www.doi.org/">DOI</a> for your results,
+        which you can cite in your publications to give your readers open access to your data.
+    </p>
+
+    <img class="scaled_image mb-3" src="../../static/images/help/publication_dialog.png">
+
+    <p>
+        Once you click the <span class="font-weight-bold">Publish</span> button on the validation result page, you will
+        be presented with a dialog
+        containing the metadata the results will be published with. You can change the metadata to your liking (within
+        some limits) and start the file upload to Zenodo by clicking <span class="font-weight-bold">Publish
+        results</span>.<br/>
+        Note that we require 'qa4sm' to be one of the keywords, and that Title, Description, Keywords, and
+        Name are mandatory fields. You don't need to give an affiliation or
+        <a href="https://orcid.org/" target="_blank">ORCID</a>, though. Changes you make to your
+        author details will <span class="font-weight-bold">not</span> be stored to your user profile - for that, please
+        got to the Profile page.<br/>
+        The upload can take a few minutes, please be patient. If it should fail, please try
+        again a few hours later. If it still doesn't work, please email us at {{admin_mail}} and include the error message
+        you received.
+    </p>
+
+    <p>
+        Please be aware that the NetCDF file and the metadata will be stored at Zenodo under the account of the QA4SM
+        project but with your name as the author. Zenodo is a separate website run at CERN over which the QA4SM team
+        has no control.<br/>
+        <span class="font-weight-bold">Assigning a DOI to a result also means that it cannot easily be unpublished or
+        deleted - see also <a href="https://help.zenodo.org/" target="_blank">Zenodo's FAQ</a>.</span><br/>
+
+        If you prefer to use your own Zenodo account, you can of course do so - the QA4SM publication feature is just
+        for convenience. Just download the NetCDF result file and upload it  yourself through Zenodo's submission process
+        with your own account. We'd ask you to use 'qa4sm' as one of the keywords so that we can easily find all QA4SM
+        results on Zenodo with a keyword search.
+        <br/>
+
+    </p>
+
+    <a id="published"></a>
+    <h1 id="help4" class="h3 mb-3 font-weight-normal">Published Validations Page</h1>
+
+    <p>
+        The list shows validations on the QA4SM service that have been published to
+        <a target="_blank" href="https://zenodo.org/">Zenodo</a> by their owners. This means the results can be cited
+        with a <a target="_blank" href="https://www.doi.org/">DOI</a>.
+    </p>
+
+    <p class="mt-5">If you want to email us to send comments, report errors, or ask questions, you can do so at {{admin_mail}}.</p>
 
     <a href="#">Back to top</a>
 
