--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -27,7 +27,9 @@
                                 {% elif not valrun.end_time %}
                                     <span class="fas fa-running" title="This validation is still running."></span>
                                 {% endif %}
-                                {% if valrun.is_archived %}
+                                {% if valrun.doi %}
+                                    <a class="doilink" target="_blank" href="{{doi_prefix}}{{ valrun.doi }}"><span class="fas fa-book" title="This result has been published with zenodo. It will NOT be automatically removed during cleanup."></span></a>
+                                {% elif valrun.is_archived %}
                                     <span class="fas fa-archive" title="This validation has been archived. It will NOT be automatically removed during cleanup."></span>
                                 {% endif %}
                             {% endif %}
@@ -68,22 +70,26 @@
                                 {% endif %}
                             </div>
 
-                            <div class="col" style="text-align: right; max-width: 6.8rem;">
+                            <div class="col" style="text-align: right; max-width: 8.75rem;">
                                 <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
                                 {% if valrun.progress > -1 and valrun.progress < 100 and valrun.end_time == null %}
                                 <button class="btn btn-sm btn-primary btn-action" title="Cancel validation" onclick="ajax_stop_validation('{{ valrun.id }}')"><span class="fas fa-stop"></span></button>
                                 {% endif %}
                                 {% if valrun.end_time %}
-                                    <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}')"><span class="fas fa-times"></span></button>
                                     {% if valrun.output_file %}
-                                        <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>
-                                        <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>
-                                    {% endif %}
-                                    {% if valrun.is_archived %}
-                                        <button class="btn btn-sm btn-primary btn-action" title="Un-archive" onclick="ajax_archive_result('{{ valrun.id }}', false)"><span class="fas fa-calendar-alt"></span></button>
-                                    {% else %}
-                                        <button class="btn btn-sm btn-primary btn-action" title="Extend lifespan" onclick="ajax_extend_result('{{ valrun.id }}', true)"><span class="fas fa-calendar-plus"></span></button>
-                                        <button class="btn btn-sm btn-primary btn-action" title="Archive" onclick="ajax_archive_result('{{ valrun.id }}', true)"><span class="fas fa-archive"></span></button>
+                                    <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>
+                                    <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>
+                                {% endif %}
+                                    {% if valrun.is_unpublished %}
+                                        <span class="patchButtonGroup{% if valrun.publishing_in_progress %} collapse {% endif %}">
+                                            <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}')"><span class="fas fa-times"></span></button>
+                                            {% if valrun.is_archived %}
+                                                <button class="btn btn-sm btn-primary btn-action" title="Un-archive" onclick="ajax_archive_result('{{ valrun.id }}', false)"><span class="fas fa-calendar-alt"></span></button>
+                                            {% else %}
+                                                <button class="btn btn-sm btn-primary btn-action" title="Extend lifespan" onclick="ajax_extend_result('{{ valrun.id }}', true)"><span class="fas fa-calendar-plus"></span></button>
+                                                <button class="btn btn-sm btn-primary btn-action" title="Archive" onclick="ajax_archive_result('{{ valrun.id }}', true)"><span class="fas fa-archive"></span></button>
+                                            {% endif %}
+                                        </span>
                                     {% endif %}
                                 {% endif %}
                             </div>
@@ -133,10 +139,8 @@
 {% block javascript %}
     <script type="text/javascript">
         csrf_token = '{{csrf_token}}';
-        archive_result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
-        delete_result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
+        result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
         stop_validation_url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}";
-        extend_result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
     </script>
     <script src="{% static 'js/results_buttons.js' %}"></script>
 {% endblock %}
