Fix minor issues

--- a/validator/templates/validator/publishing_dialog.html
+++ b/validator/templates/validator/publishing_dialog.html
@@ -60,7 +60,7 @@
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button class="btn btn-primary" title="Publish on Zenodo" type="button" onclick="ajax_publish_result('{{ val.id }}')">Publish results</button>
+                        <button class="btn btn-primary" title="Publish on Zenodo" type="button" onclick="ajax_publish_result('{{ val.id }}')">Publish now!</button>
                     </div>
 
                 {% endwith %}
