--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -106,8 +106,8 @@
                         {% endif %}
 
                         {% if is_owner %}
-                            <li>
-                                {% if val.expiry_date %}
+                            {% if val.expiry_date %}
+                                <li>
                                     {% if val.is_near_expiry %}
                                         <span class="fas fa-exclamation-triangle"></span>
                                         This validation will SOON be automatically removed during cleanup on {{ val.expiry_date }}.
@@ -115,21 +115,26 @@
                                         <span class="fas fa-calendar-alt"></span>
                                         This validation will be automatically removed during cleanup on {{ val.expiry_date }}.
                                     {% endif %}
-                                {% else %}
-                                    {% if val.doi %}
-                                        <span class="fas fa-book"></span> This result was published on zenodo with DOI <a target="_blank" href="{{doi_prefix}}{{ val.doi }}">{{ val.doi }}</a>.
-                                    {% elif val.is_archived %}
-                                        <span class="fas fa-archive"></span>
-                                        This validation has been archived. It will NOT be automatically removed during cleanup.
-                                    {% endif %}
-                                {% endif %}
+                                </li>
+                            {% elif val.is_archived %}
+                                <li>
+                                    <span class="fas fa-archive"></span>
+                                    This validation has been archived. It will NOT be automatically removed during cleanup.
+                                </li>
+                            {% endif %}
+                        {% endif %}
+
+                        {% if val.doi %}
+                            <li>
+                               <span class="fas fa-book"></span> This result was published on zenodo with DOI <a target="_blank" href="{{doi_prefix}}{{ val.doi }}">{{ val.doi }}</a>.
                             </li>
                         {% endif %}
+
                     </ul>
 
                     {% if is_owner and val.is_unpublished %}
                         <div style="float: right;" class="patchButtonGroup{% if val.publishing_in_progress %} collapse {% endif %}">
-                            <button class="btn btn-sm btn-primary" title="Remove result" onclick="ajax_delete_result('{{ val.id }}')"><span class="fas fa-times"></span> Remove</button>
+                            <button class="btn btn-sm btn-primary" title="Remove result" onclick="ajax_delete_result('{{ val.id }}', true)"><span class="fas fa-times"></span> Remove</button>
                             {% if val.is_archived %}
                                 <button class="btn btn-sm btn-primary" title="Un-archive" onclick="ajax_archive_result('{{ val.id }}', false)"><span class="fas fa-calendar-alt"></span> Un-archive</button>
                             {% else %}
@@ -263,6 +268,7 @@
 
 <script type="text/javascript">
     csrf_token = '{{csrf_token}}';
+    result_list_url = "{% url 'myruns' %}";
     result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
     stop_validation_url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}";
 </script>
