--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -82,7 +82,7 @@
                                 {% endif %}
                                     {% if valrun.is_unpublished %}
                                         <span class="patchButtonGroup{% if valrun.publishing_in_progress %} collapse {% endif %}">
-                                            <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}')"><span class="fas fa-times"></span></button>
+                                            <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}', false)"><span class="fas fa-times"></span></button>
                                             {% if valrun.is_archived %}
                                                 <button class="btn btn-sm btn-primary btn-action" title="Un-archive" onclick="ajax_archive_result('{{ valrun.id }}', false)"><span class="fas fa-calendar-alt"></span></button>
                                             {% else %}
