--- a/validator/static/css/scheme.css
+++ b/validator/static/css/scheme.css
@@ -118,6 +118,29 @@ a:hover, .link-primary:hover {
     color: #ffffff;
 }
 
+.news {
+     background-color: #CEEBF6;
+}
+
+.news ul {
+    padding-left: 1rem;
+    margin-bottom: 0;
+}
+
+
+.list li::before, .news li::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f105";
+    float: left;
+    margin-left: -1em;
+}
+
+.list li, .news li {
+    display: block;
+}
+
+
 .modal-header {
     padding: .5rem 1.25rem;
     background-color: #00AAE3;
