Improve main menu on mobile devices

--- a/validator/templates/common/base.html
+++ b/validator/templates/common/base.html
@@ -18,49 +18,57 @@
 
 <body>
 
-    <div class="navbar navbar-expand-md d-flex flex-md-row p-3 px-md-4 mb-3 border-bottom shadow-sm">
-        <div class="d-flex flex-column navbar-brand">
-            <a class="h5 font-weight-normal my-0" style="color: inherit;" href="{% url 'home' %}">QA4SM Validation Service</a>
-        </div>
+    <nav class="navbar navbar-expand-md mb-3 border-bottom shadow-sm py-md-3">
 
-        <ul class="navbar-nav mr-auto">
-            {% url 'validation' as validation_url %}
-            {% url 'myruns' as my_validations_url %}
-            {% url 'published_results' as published_url %}
-            {% url 'datasets' as datasets_url %}
-            {% url 'about' as about_url %}
-            {% url 'terms' as terms_url %}
-            {% url 'help' as help_url %}
-            {% url 'user_profile' as user_profile_url %}
+        <a class="navbar-brand mr-0 mr-md-2" href="{% url 'home' %}" aria-label="QA4SM">QA4SM Validation Service</a>
 
-            <li class="nav-item">
-                <div class="dropdown show">
-                    <a class="navbar-btn btn btn-outline-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">Menu</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item {% if request.path == about_url %} navbar-btn-active {% endif %}" href="{{ about_url }}"><span class="fas fa-info-circle"></span> About</a>
-                        <a class="dropdown-item {% if request.path == help_url %} navbar-btn-active {% endif %}" href="{{ help_url }}"><span class="fas fa-question-circle"></span> Help</a>
-                        <a class="dropdown-item {% if request.path == datasets_url %} navbar-btn-active {% endif %}" href="{{ datasets_url }}"><span class="fas fa-database"></span> Datasets</a>
-                        <a class="dropdown-item {% if request.path == terms_url %} navbar-btn-active {% endif %}" href="{{ terms_url }}"><span class="fas fa-balance-scale"></span> Terms</a>
-                        {% if user.is_authenticated %}
-                            <a class="dropdown-item {% if request.path == user_profile_url %} navbar-btn-active {% endif %}" href="{% url 'user_profile' %}"><span class="fas fa-user-cog"></span> Profile</a>
-                            <a class="dropdown-item" href="{% url 'logout' %}"><span class="fas fa-door-open"></span> Logout</a>
-                        {% endif %}
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+
+                {% url 'validation' as validation_url %}
+                {% url 'myruns' as my_validations_url %}
+                {% url 'published_results' as published_url %}
+                {% url 'datasets' as datasets_url %}
+                {% url 'about' as about_url %}
+                {% url 'terms' as terms_url %}
+                {% url 'help' as help_url %}
+                {% url 'user_profile' as user_profile_url %}
+
+                <li class="nav-item mx-md-3 mb-1 mb-md-0">
+                    <div class="dropdown show">
+                        <a class="navbar-btn btn btn-outline-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">Menu</a>
+
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item {% if request.path == about_url %} navbar-btn-active {% endif %}" href="{{ about_url }}"><span class="fas fa-info-circle"></span> About</a>
+                            <a class="dropdown-item {% if request.path == help_url %} navbar-btn-active {% endif %}" href="{{ help_url }}"><span class="fas fa-question-circle"></span> Help</a>
+                            <a class="dropdown-item {% if request.path == datasets_url %} navbar-btn-active {% endif %}" href="{{ datasets_url }}"><span class="fas fa-database"></span> Datasets</a>
+                            <a class="dropdown-item {% if request.path == terms_url %} navbar-btn-active {% endif %}" href="{{ terms_url }}"><span class="fas fa-balance-scale"></span> Terms</a>
+                            {% if user.is_authenticated %}
+                                <a class="dropdown-item {% if request.path == user_profile_url %} navbar-btn-active {% endif %}" href="{% url 'user_profile' %}"><span class="fas fa-user-cog"></span> Profile</a>
+                                <a class="dropdown-item" href="{% url 'logout' %}"><span class="fas fa-door-open"></span> Logout</a>
+                            {% endif %}
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="navbar-btn btn btn-outline-primary {% if request.path == validation_url %} navbar-btn-active {% endif %}" href="{{ validation_url }}"><span class="fas fa-cogs"></span> Validate</a>
-            </li>
-            <li class="nav-item">
-                <a class="navbar-btn btn btn-outline-primary {% if request.path == my_validations_url %} navbar-btn-active {% endif %}" href="{{ my_validations_url }}"><span class="fas fa-user-circle"></span> My Validations</a>
-            </li>
-            <li class="nav-item">
-                <a class="navbar-btn btn btn-outline-primary {% if request.path == published_url %} navbar-btn-active {% endif %}" href="{{ published_url }}"><span class="fas fa-book"></span> Published Validations</a>
-            </li>
-        </ul>
-    </div>
+                </li>
+                <li class="nav-item mr-md-3 mb-1 mb-md-0">
+                    <a class="navbar-btn btn btn-outline-primary {% if request.path == validation_url %} navbar-btn-active {% endif %}" href="{{ validation_url }}"><span class="fas fa-cogs"></span> Validate</a>
+                </li>
+                <li class="nav-item mr-md-3 mb-1 mb-md-0">
+                    <a class="navbar-btn btn btn-outline-primary {% if request.path == my_validations_url %} navbar-btn-active {% endif %}" href="{{ my_validations_url }}"><span class="fas fa-user-circle"></span> My Validations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="navbar-btn btn btn-outline-primary {% if request.path == published_url %} navbar-btn-active {% endif %}" href="{{ published_url }}"><span class="fas fa-book"></span> Published Validations</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
 
     {% block content %}
     {% endblock %}
