--- a/validator/static/css/landing.css
+++ b/validator/static/css/landing.css
@@ -56,7 +56,8 @@ svg text {
 .overflow img {
     padding: 0.40rem;
     float: right;
-    height: 60px;
+    max-height: 60px;
+    max-width: 30%;
 }
 
 /* Centered text */
