--- a/validator/templates/validator/index.html
+++ b/validator/templates/validator/index.html
@@ -20,22 +20,21 @@
                 <div class="carousel-caption">
                     <div class="text mb-3">
                         <h1>Quality Assurance for Soil Moisture</h1>
-                        <h3 class="carousel-desc">
-                            Validation of satellite soil moisture products
-                            <br />
+                        <h3 class="carousel-desc d-none d-sm-block">
+                            Validation of satellite soil moisture products <br/>
                             against in-situ and model reference data
                         </h3>
                     </div>
 
                     <p>
-                        <a style="width: 7em;" class="btn btn-lg btn-primary" href="{% url 'published_results' %}" role="button">See results</a>
-                        <span style="margin-left: 1em; margin-right: 1em;" class="carousel-desc">or</span>
+                        <a style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="{% url 'published_results' %}" role="button">See results</a>
+                        <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
                         {% if user.is_authenticated %}
-                            <a style="width: 7em;" class="btn btn-lg btn-primary" href="{% url 'validation' %}" role="button">Try it</a>
+                            <a style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="{% url 'validation' %}" role="button">Try it</a>
                         {% else %}
-                            <a style="width: 7em;" class="btn btn-lg btn-primary" href="{% url 'signup' %}" role="button">Sign up</a>
-                            <span style="margin-left: 1em; margin-right: 1em;" class="carousel-desc">or</span>
-                            <a style="width: 7em;" class="btn btn-lg btn-primary" href="{% url 'login' %}" role="button">Log in</a>
+                            <a style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="{% url 'signup' %}" role="button">Sign up</a>
+                            <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
+                            <a style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="{% url 'login' %}" role="button">Log in</a>
                         {% endif %}
                     </p>
 
@@ -71,7 +70,7 @@
 
             <hr class="featurette-divider">
 
-            <div class="row featurette">
+            <div class="row featurette mx-1">
                 <div class="col-md-7">
                     <h3 class="featurette-heading">Overview <span class="text-muted">QA4SM</span></h3>
                     <p class="lead">
