--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 
+<!--Monika-->
+    <link href="{% static 'css/monika.css' %}" rel="stylesheet">
+<!--Monika-->
+
 <div class="container">
 
     <div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
@@ -36,7 +40,15 @@
                             <span class=" font-weight-normal">Started:</span> {{ valrun.start_time }}
                         </h5>
                         {% if valrun.name_tag %}
-                            <h5 class="my-0" style="float: right"><span class=" font-weight-normal">Name:</span> {{ valrun.name_tag }}</h5>
+<!--                        Monika-->
+                            <h5 class="my-0" style="float: right">
+                                <span class=" font-weight-normal">Name:</span>
+                                <span class="font-weight-normal" id="no_edit_name"> {{ valrun.name_tag }} </span>
+                                <input class="d-none" id="edit_name"/>
+                                <button class="btn btn-sm btn-primary btn-action" id="edit_name_btn" title="Change Name" onclick="edit_name(event)"><span class="fas fa-pen"></span></button>
+                                <button class="btn btn-sm btn-primary btn-action d-none" id="save_name_btn" title="Change Name" onclick="monika(event, '{{ valrun.id}}')"><span class="fas fa-save"></span></button>
+                            </h5>
+<!--                        Monika-->
                         {% endif %}
                     </div>
                     <div class="card-body" style="padding: 0.5rem 1.25rem;">
@@ -143,4 +155,8 @@
         stop_validation_url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}";
     </script>
     <script src="{% static 'js/results_buttons.js' %}"></script>
+<!--Monika-->
+    <script src="{% static 'js/some_functions.js' %}"></script>
+
+<!--Monika-->
 {% endblock %}
