--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -43,10 +43,10 @@
 <!--                        Monika-->
                             <h5 class="my-0" style="float: right">
                                 <span class=" font-weight-normal">Name:</span>
-                                <span class="font-weight-normal" id="no_edit_name"> {{ valrun.name_tag }} </span>
-                                <input class="d-none" id="edit_name"/>
-                                <button class="btn btn-sm btn-primary btn-action" id="edit_name_btn" title="Change Name" onclick="edit_name(event)"><span class="fas fa-pen"></span></button>
-                                <button class="btn btn-sm btn-primary btn-action d-none" id="save_name_btn" title="Change Name" onclick="monika(event, '{{ valrun.id}}')"><span class="fas fa-save"></span></button>
+                                <span class="font-weight-normal no_edit_name"> {{ valrun.name_tag }} </span>
+                                <input class="d-none edit_name"/>
+                                <button class="btn btn-sm btn-primary btn-action edit_name_btn" title="Change Name" onclick="edit_name(event)"><span class="fas fa-pen"></span></button>
+                                <button class="btn btn-sm btn-primary btn-action d-none save_name_btn" title="Change Name" onclick="monika(event, '{{ valrun.id}}')"><span class="fas fa-save"></span></button>
                             </h5>
 <!--                        Monika-->
                         {% endif %}
