buttons added to the result view, some improvements of functions added

--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -46,7 +46,7 @@
                                 <span class="font-weight-normal no_edit_name"> {{ valrun.name_tag }} </span>
                                 <input class="d-none edit_name"/>
                                 <button class="btn btn-sm btn-primary btn-action edit_name_btn" title="Change Name" onclick="edit_name(event)"><span class="fas fa-pen"></span></button>
-                                <button class="btn btn-sm btn-primary btn-action d-none save_name_btn" title="Change Name" onclick="monika(event, '{{ valrun.id}}')"><span class="fas fa-save"></span></button>
+                                <button class="btn btn-sm btn-primary btn-action d-none save_name_btn" title="Change Name" onclick="save_name(event, '{{ valrun.id}}')"><span class="fas fa-save"></span></button>
                             </h5>
 <!--                        Monika-->
                         {% endif %}
