--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -21,14 +21,21 @@
         <div class="card-deck">
             <div id="result_summary" class="card mb-4 shadow-sm">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Summary</h4>
+                    <h4 class="my-0 font-weight-normal">
+                        Summary:
+                        <span class="my-0 font-weight-normal no_edit_name">{% if val.name_tag %} {{ val.name_tag }} {% endif %}</span>
+                        <input class="d-none edit_name"/>
+                        <button class="btn btn-sm btn-primary btn-action edit_name_btn" title="Change Name" onclick="edit_name(event)"><span class="fas fa-pen"></span></button>
+                        <button class="btn btn-sm btn-primary btn-action d-none save_name_btn" title="Change Name" onclick="save_name(event, '{{ valrun.id}}')"><span class="fas fa-save"></span></button>
+
+                    </h4>
                 </div>
                 <div class="card-body">
                     <ul>
                         <li>Started validation on {{ val.start_time }}, finished on {{ val.end_time }}.</li>
-                        {% if val.name_tag %}
-                            <li>Validation name: {{ val.name_tag }}</li>
-                        {% endif %}
+<!--                        {% if val.name_tag %}-->
+<!--                            <li>Validation name: {{ val.name_tag }}</li>-->
+<!--                        {% endif %}-->
 
                         <li>Compared {{ val.dataset_configurations.count }} datasets:
                             <ul>
@@ -269,6 +276,9 @@
 
 {% if is_owner %}
     <script src="{% static 'js/results_buttons.js' %}"></script>
+<!--Monika-->
+    <script src="{% static 'js/some_functions.js' %}"></script>
+<!--Monika-->
 {% endif %}
 
 {% endblock %}
