Fixing layout on validate page, #1

--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -19,7 +19,7 @@
 
                     <div class="card-deck">
 
-                        <div id="data_accordion" style="width:50%">
+                        <div id="data_accordion" style="flex-basis: 50%;">
                             <div class="card mb-4 shadow-sm">
                                 <div class="card-header" id="data_header">
                                     <h4 class="my-0 font-weight-normal">Data</h4>
@@ -124,7 +124,7 @@
                             </div>
                         </div>
 
-                        <div id="ref_accordion" style="width:50%">
+                        <div id="ref_accordion" style="flex-basis: 50%;">
                             <div class="card mb-4 shadow-sm">
                                 <div class="card-header" id="ref_header">
                                     <h4 class="my-0 font-weight-normal">Reference</h4>
